--- a/api/package.json
+++ b/api/package.json
@@ -23,5 +23,12 @@
     "source-map-loader": "^0.2.4",
     "ts-loader": "^7.0.1",
     "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "immuto-backend": "^0.1.8",
+    "mongodb": "^3.5.6",
+    "node-schedule": "^1.3.2",
+    "validator": "^13.0.0"
   }
 }
