--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,9 @@
     "@types/react-dom": "^16.9.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "ts-loader": "^7.0.1",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,8 +40,6 @@
     "@typescript-eslint/parser": "^2.29.0",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.19.0",
-    "source-map-loader": "^0.2.4",
-    "ts-loader": "^7.0.1",
-    "typescript": "^3.8.3"
+    "source-map-loader": "^0.2.4"
   }
 }
