--- a/web/package.json
+++ b/web/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^13.13.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "style-loader": "^1.1.4",
     "ts-loader": "^7.0.1",
     "typescript": "^3.8.3"
   },
