--- a/web/package.json
+++ b/web/package.json
@@ -12,10 +12,13 @@
     "@types/node": "^13.13.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@types/react-router-dom": "^5.1.4",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.2",
+    "immuto-backend": "^0.1.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "style-loader": "^1.1.4",
     "ts-loader": "^7.0.1",
