--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "immuto-backend": "^0.1.8",
     "mongodb": "^3.5.6",
