Sample map view

--- a/web/package.json
+++ b/web/package.json
@@ -21,11 +21,13 @@
     "bootstrap": "^4.4.1",
     "css-loader": "^3.5.2",
     "immuto-backend": "^0.1.8",
+    "mapbox-gl": "^1.10.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-mapbox-gl": "^4.8.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "recharts": "^1.8.5",
