--- a/web/package.json
+++ b/web/package.json
@@ -14,11 +14,14 @@
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.4",
     "@types/recharts": "^1.8.9",
+    "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
+    "bootstrap": "^4.4.1",
     "css-loader": "^3.5.2",
     "immuto-backend": "^0.1.8",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
