--- a/web/package.json
+++ b/web/package.json
@@ -20,7 +20,7 @@
     "babel-loader": "^8.1.0",
     "bootstrap": "^4.5.2",
     "css-loader": "^3.6.0",
-    "immuto-backend": "^0.1.9",
+    "immuto-sdk": "^1.0.3",
     "mapbox-gl": "^1.11.1",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
@@ -29,7 +29,7 @@
     "react-dom": "^16.13.1",
     "react-mapbox-gl": "^4.8.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "recharts": "^1.8.5",
     "style-loader": "^1.2.1",
     "ts-loader": "^7.0.5",
