--- a/api/package.json
+++ b/api/package.json
@@ -17,19 +17,19 @@
   },
   "homepage": "https://github.com/immuto-inc/Immunify#readme",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.29.0",
-    "@typescript-eslint/parser": "^2.29.0",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
     "eslint": "^6.8.0",
     "source-map-loader": "^0.2.4",
-    "ts-loader": "^7.0.1",
-    "typescript": "^3.8.3"
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.7"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "immuto-backend": "^0.1.8",
-    "mongodb": "^3.5.6",
+    "immuto-sdk": "^1.0.3",
+    "mongodb": "^3.6.0",
     "node-schedule": "^1.3.2",
-    "validator": "^13.0.0"
+    "validator": "^13.1.1"
   }
 }
